Glide2x wrap & build improvements

--- a/g2xwrap/Makefile
+++ b/g2xwrap/Makefile
@@ -1,22 +1,28 @@
-CFLAGS=-I../openglide -I. -Werror -msse2 -Os -flto -fomit-frame-pointer
+CFLAGS=-I../build -I../openglide -I. -Werror -msse2 -Os -flto -fomit-frame-pointer
 LDFLAGS=-Wl,--disable-auto-image-base -Wl,--dynamicbase -Wl,--nxcompat
-LIBS=-L../../qemu-3dfx/wrapper/build -lglide2x.dll
+LIBS=-L. -lglide2x.dll
 TARGET3=glide3x.dll
 TARGET1=glide.dll
+PEXPORTS=pexports
 
-all: $(TARGET3) $(TARGET1)
+.PHONY: sanity clean
+
+all: sanity $(TARGET3) $(TARGET1)
 	@echo "  CFLAGS   $(CFLAGS)"
 	@echo "  LDFLAGS  $(LDFLAGS)"
 
-$(TARGET3): gl301wrp.def wr301dll.cpp
+sanity:
 	@if [ "$$MSYSTEM" != "MINGW32" ]; then echo "Error: MSYSTEM == $$MSYSTEM"; exit 1; fi
+	$(PEXPORTS) ../build/glide2x.dll | sed "s/^_//" > /tmp/dll.def
+	dlltool -U -d /tmp/dll.def -l libglide2x.dll.a
+
+$(TARGET3): gl301wrp.def wr301dll.cpp
 	@echo "  CXX  $@"
 	@g++ -static -mdll $(CFLAGS) -s -o $@ $^ $(LDFLAGS) $(LIBS)
 
 $(TARGET1): gl211wrp.def wr211dll.cpp
-	@if [ "$$MSYSTEM" != "MINGW32" ]; then echo "Error: MSYSTEM == $$MSYSTEM"; exit 1; fi
 	@echo "  CXX  $@"
 	@g++ -static -mdll $(CFLAGS) -s -o $@ $^ $(LDFLAGS) $(LIBS)
 
 clean:
-	@rm -f $(TARGET1) $(TARGET3)
+	@rm -f $(TARGET1) $(TARGET3) *.a
