g2xwrap: update Makefile

--- a/g2xwrap/Makefile
+++ b/g2xwrap/Makefile
@@ -1,8 +1,9 @@
 CFLAGS=-I../build -I../openglide -I. -Werror -march=x86-64-v2 -mtune=generic -Os -flto -fomit-frame-pointer
-LDFLAGS=-Wl,--disable-auto-image-base -Wl,--dynamicbase -Wl,--nxcompat
+LDFLAGS=-Wl,--disable-auto-image-base,--no-seh,--dynamicbase,--nxcompat
 LIBS=-L. -lglide2x.dll
 TARGET3=glide3x.dll
 TARGET1=glide.dll
+DLLTOOL=dlltool
 GENDEF=gendef
 
 .PHONY: sanity distclean clean
@@ -13,9 +14,9 @@ all: sanity $(TARGET3) $(TARGET1)
 
 sanity:
 	@if [ "$$MSYSTEM" != "MINGW32" ]; then echo "Error: MSYSTEM == $$MSYSTEM"; exit 1; fi
-	$(GENDEF) - ../build/.libs/libglide2x.dll | \
+	@$(GENDEF) - ../build/.libs/libglide2x.dll | \
 		sed "s/\(@[0-9]*\)@[0-9]*/\1/;s/\;\ Check.*//;s/^_//" > /tmp/dll.def
-	dlltool -U -d /tmp/dll.def -l libglide2x.dll.a
+	@$(DLLTOOL) -U -d /tmp/dll.def -l libglide2x.dll.a
 
 $(TARGET3): gl301wrp.def wr301dll.cpp
 	@echo "  CXX  $@"
